<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContentProvider"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:hint="@string/url"
        android:text="@string/url" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:text="@string/Enter_URL" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText1"
        android:maxWidth="100dip"
        android:minHeight="60dip"
        android:minWidth="80dip"
        android:onClick="@string/download"
        android:text="@string/async" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_toLeftOf="@+id/button1"
        android:contentDescription="@+id/imageView1"
        android:src="@drawable/drschmidt" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:lines="@integer/line"
        android:maxWidth="100dip"
        android:minHeight="60dip"
        android:minWidth="80dip"
        android:onClick="@string/runAsyncQuery"
        android:text="@string/asyncHandler" />

    <Button
        android:id="@+id/Button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="24dp"
        android:maxWidth="100dip"
        android:minHeight="60dip"
        android:minWidth="80dip"
        android:onClick="@string/resetButton"
        android:text="@string/reset" />

    <Button
        android:id="@+id/Button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="21dp"
        android:maxWidth="100dip"
        android:minHeight="60dip"
        android:minWidth="80dip"
        android:onClick="@string/runCursor"
        android:text="@string/cursor" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button4"
        android:layout_marginBottom="19dp"
        android:layout_toRightOf="@+id/imageView1"
        android:maxWidth="100dip"
        android:minHeight="60dip"
        android:minWidth="80dip"
        android:onClick="@string/runQuery"
        android:text="@string/query" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </ListView>

</RelativeLayout>
